fix(components): don't show tooltip when it's not truncated [JOB-36864] (#738)
* switch tooltip logic to be safer

* even more safe

* ensure truncation works

--- a/packages/components/src/Typography/css/Typography.css
+++ b/packages/components/src/Typography/css/Typography.css
@@ -32,4 +32,7 @@
   margin: 0;
   padding: 0;
   font-family: var(--typography--fontFamily-normal);
+  /* Wrap really long words or URL's */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
